# game-analyzer

./: .gitignore  Pipfile  README.md  analyzer.py  main.py  nim.ipynb  nim.py  ox.ipynb  pyproject.toml  result.py  setup.py  shinchoku.md  shiritori.ipynb  tictactoe.ipynb  util.py
game-analyzer/: __init__.py
game-analyzer/src/: util.py
game-analyzer/src/game/: game.py
game-analyzer/src/solver/: strong_solver.py
game-analyzer/src/state/: state.py
game_analyzer/src/: __init__.py  util.py
game_analyzer/src/game/: game.py
games/: __init__.py  base.py  tictactoe.py
notebooks/: graph.ipynb  lrud_game.ipynb  nim.ipynb  ox_game.ipynb  shiritori.ipynb  stones.ipynb  tictactoe.ipynb
samples/: graph.py  lrud_game.py  nim.py  sample.py  shiritori.py  stones.py  submit.py  tictactoe.py
solvers/: __init__.py  analyzer.py  base.py  strong_solver.py
src/game_analyzer/: __init__.py  result.py  util.py
src/game_analyzer/game/: __init__.py  game.py
src/game_analyzer/solver/: __init__.py  solver.py
src/game_analyzer/state/: __init__.py  hash_array.py  hash_state.py  state.py
src/game_analyzer/visualizer/: __init__.py  visualizer.py
tests/: test_state.py
tests/solver/: test_solver_by_graph.py  test_solver_by_lrud.py  test_solver_by_shiritori.py  test_solver_by_stones.py  test_solver_by_stones_hashstate.py  test_solver_time.py
tests/solver/problems/: graph.py  lrud.py  shiritori.py  stones.py
tests/state/: test_hasharray.py  test_hashstate.py  test_state.py
