[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "game-analyzer"
version = "0.1.0"
description = "Analyze a game"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Yuya Mizutani", email = "mizutaniexe@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.setuptools]
package-dir = {""="src"}

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # doc-string
    "ANN",      # annotation
    "PGH",      # pgh
    "TCH",      # tch
    "SIM118",   # Use `key in dict` instead of `key in dict.keys()`
    "RUF",      # ruf
    "S311",     # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY003",   # Avoid specifying long messages outside the exception class
    "EM001",    # Exception must not use a string literal, assign to variable first
]
exclude = [
    "tests/*",
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"