[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "game-analyzer"
description = "Analyze a game"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Yuya Mizutani", email = "mizutaniexe@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.setuptools]
package-dir = {""="src"}

[tool.ruff]
line-length = 120
indent-width = 4
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
exclude = ["externals"]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # doc-string
    "ANN",      # annotation
    "PGH",      # pgh
    "TCH",      # tch
    "CPY",      # cpy
    "SIM118",   # Use `key in dict` instead of `key in dict.keys()`
    "RUF",      # ruf
    "S311",     # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY003",   # Avoid specifying long messages outside the exception class
    "EM101",    # Exception must not use a string literal, assign to variable first
]
exclude = ["tests/*"]

[tool.ruff.lint.pylint]
max-branches = 18